--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hex Travel</title>
+    {{#if showTests}}
+    <link rel="stylesheet" href="/vendor/mocha.css">
+    {{/if}}
     {{!-- 引入基本样式 --}}
     <link rel="stylesheet" href="/css/common.css">
     {{!-- 引入bootstrap.css --}}
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     {{!-- 引入main.css --}}
     <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/jquery.js"></script>
 </head>
 
 <body>
@@ -42,10 +46,20 @@
             </div>
         </div>
     </div>
+    {{#if showTests}}
+    <div id="mocha"></div>
+    <script src="/vendor/mocha.js"></script>
+    <script src="/vendor/chai.js"></script>
     <script>
-        console.log
+        mocha.ui('tdd')
+        var assert = chai.assert
     </script>
-    <script src="/js/jquery.js"></script>
+    <script src="/qa/tests-global.js"></script>
+    {{#if pageTestScript}}
+    <script src="{{pageTestScript}}"></script>
+    {{/if}}
+    <script>mocha.run()</script>
+    {{/if}}
     <script src="/js/main.js"></script>
 </body>
 
